--- a/index.html
+++ b/index.html
@@ -3,30 +3,47 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-width=1, minimum-scale=1" />
+	
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&family=Raleway:wght@00&display=swap" rel="stylesheet">
+
 	<link rel="stylesheet" type="text/css" href="main.css">
 	<title>Portfolio</title>
 </head>
 <body>
 	<section class="section1">
 		<div class="main-container">
-			<h1>Soumyajit Roy</h1>
-			<p>Sentence</p>
-			<a href="#">Link</a>
+			<div class="intro1">
+				<h2>Soumyajit Roy</h2>
+			</div>
+			<div class="intro2">
+				<div class="nav">
+					<div class="left-nav">Left-Nav</div>
+					<div class="right-nav">Right-Nav</div>
+				</div>
+				<div class="left-col">Left Column</div>
+				<div class="right-col">Right Column</div>
+
+				
+			</div>
+			
+			
 		</div>
 	</section>
 	<section class="section2">
 		<div class="main-container">
-			<h1>About Me</h1>
+			<h5>About Me</h5>
 		</div>
 	</section>
 	<section class="section1">
 		<div class="main-container">
-			<h1>Portfolio</h1>
+			<h5>Portfolio</h5>
 		</div>
 	</section>
 	<section class="section2">
 		<div class="main-container">
-			<h1>Contact</h1>
+			<h5>Contact</h5>
 		</div>
 	</section>
 
